@@ -1,3 +1,8 @@
+2007-04-05  Jakub Jelinek  <jakub@redhat.com>
+
+	* nis/nis_call.c (__nisfind_server): Replace (*dir)->do_servers
+	with obj->do_servers after first_shoot.
+
 2007-04-03  Ulrich Drepper  <drepper@redhat.com>
 
 	* posix/Makefile (routines): Add sched_cpucount.
